# clusterm

./: --version  BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  build.py  clusterm.spec  main.py  main_entry.py  pyproject.toml  test_command_pad.py
docs/: MIGRATION.md
docs/architecture/: ADR-0001-modular-architecture.md  ADR-0002-plugin-system.md  ADR-0003-event-driven-architecture.md  ADR-0004-configuration-management.md  ADR-0005-ui-component-architecture.md  README.md
examples/: command_input_demo.py  intelligent_input_demo.py
scripts/: bump_version.py  release.py
src/: __init__.py  __version__.py
src/clusterm/: __main__.py  __version__.py
src/clusterm/core/: command_history.py  events.py  logger.py
src/clusterm/k8s/: __init__.py  commands.py  manager.py
src/clusterm/plugins/: __init__.py  base.py  manager.py
src/clusterm/plugins/builtin/: __init__.py
src/clusterm/ui/: screens.py
src/clusterm/ui/components/: command_pad.py  context_selector.py  modals.py  panels.py
src/core/: __init__.py  command_history.py  config.py  events.py  exceptions.py  live_completions.py  logger.py
src/k8s/: __init__.py  cluster.py  commands.py  manager.py  resources.py
src/plugins/: __init__.py  base.py  manager.py
src/plugins/builtin/: __init__.py
src/ui/: __init__.py  app.py  screens.py
src/ui/components/: __init__.py  command_input.py  command_pad.py  context_selector.py  enhanced_command_input.py  intelligent_command_input.py  modals.py  panels.py  tables.py
src/ui/styles/: base.tcss
src/ui/styles/components/: buttons.tcss  command-input-specific.tcss  command-input.tcss  command-pad.tcss  modals-specific.tcss  panels-specific.tcss  (+2 more)
tests/: __init__.py  conftest.py  test_command_pad.py
tests/core/: test_config.py  test_events.py
tests/k8s/: test_cluster_manager.py
(+4 files in other folders)
